--- a/REMOTE_APP_ANDROID/QUAD_REMOTE/AndroidManifest.xml
+++ b/REMOTE_APP_ANDROID/QUAD_REMOTE/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="13" android:targetSdkVersion="19"/>
+    <uses-sdk android:minSdkVersion="13" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
